--- a/client/style.css
+++ b/client/style.css
@@ -129,8 +129,19 @@ header {
     background-color: greenyellow;
 }
 
+.user {
+    display: flex;
+    align-items: center;
+    margin: 0.5rem;
+    border: 1px solid black;
+}
+
+.user img {
+    height: 100px;
+}
+
 .avatar {
-    border: 1px solid red;
+    /* border: 1px solid red; */
     max-height: inherit;
 }
 
