--- a/client/style.css
+++ b/client/style.css
@@ -9,7 +9,8 @@ html {
 }
 
 h1,
-h2 {
+h2,
+h3 {
     font-family: "Heebo", sans-serif;
 }
 
@@ -26,6 +27,14 @@ h2 {
     /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: var(--main-bg-color);
     opacity: 1; /* Firefox */
+}
+
+a {
+    color: var(--light-color);
+}
+
+a:hover {
+    color: var(--dark-shade-color);
 }
 
 input {
@@ -47,7 +56,7 @@ button {
     margin: 0.5rem;
     font-family: "Heebo", sans-serif;
     font-weight: bold;
-    font-size: 1.4rem;
+    font-size: 1.1rem;
     border-radius: var(--border-radius);
     border: none;
 }
@@ -106,7 +115,7 @@ main {
 
 .welcome div {
     margin: 1rem;
-    min-width: 40%;
+    min-width: 20%;
 }
 
 .greeting {
@@ -123,6 +132,20 @@ main {
 .registration h1 {
     margin: 0.5rem;
 }
+
+.resetPassword {
+    padding: 1rem;
+}
+
+.resetPassword form {
+    padding: 1rem;
+}
+
+.resetPassword h3 {
+    margin-left: 10px;
+    margin-top: 10px;
+}
+
 .app {
 }
 
