--- a/client/style.css
+++ b/client/style.css
@@ -79,9 +79,9 @@ body {
 header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     max-height: 60px;
     background-color: var(--light-shade-color);
-    margin-bottom: 30px;
     width: 90%;
     margin: 0 auto 2rem auto;
 }
@@ -227,6 +227,10 @@ main {
     align-items: center;
 }
 
+.profileDetails div {
+    padding: 20px;
+}
+
 .profile h1 {
     font-size: 1.5rem;
 }
@@ -261,7 +265,7 @@ main {
 
 .chatMessageBox {
     overflow-y: scroll;
-    max-height: 60vh;
+    max-height: 70vh;
     display: flex;
     flex-direction: column-reverse;
 }
